# wavin_sentio_connect

./: .gitignore  README.md  pytest.ini  requirements.txt  setup.cfg
.github/scripts/: update__version__.py
.github/workflows/: release-drafter.yml  release.yml
src/wavin_sentio_connect/: __init__.py  wavin_sentio_connect.py
src/wavin_sentio_connect/devices/: __init__.py  wavin_sentio.py
tests/: credentials.py  test_wavin_sentio_connect.py
