[metadata]
name = wavin_sentio_connect
version = attr: wavin_sentio_connect.__version__
author = HairingX
license = MIT
description = A library designed for seamless interaction with Modbus devices using an event-driven approach, supporting TCP, unabto and other protocols.
keywords = modbus, unabto, micronabto, micro_nabto, modbustcp, modbus_tcp, event, remote, connect, library
url = https://github.com/HairingX/wavin_sentio_connect
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.12
packages = find:
package_dir =
    =src
zip_safe = False
install_requires =
    modbus_event_connect @ git+https://github.com/HairingX/modbus_event_connect

[options.packages.find]
where=src